fix lng option on mobile

--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -85,12 +85,26 @@
     bottom: 30%;
     padding: 0.4em;
 
+    @include responsive-max(lg) {
+      padding: 0em;
+      left: 0;
+      right: 5%;
+      bottom: 200%;
+    }
+
     &--button {
       width: 100%;
       background-color: $background;
       padding: 0.3em 2.6em;
       color: $paragraph;
+      text-align: center;
       cursor: pointer;
+
+      @include responsive-max(lg) {
+        padding: 0.6em 2.6em;
+        background-color: blue;
+        border: 1px solid $paragraph;
+      }
 
       &:hover {
         color: $button;
